alignements hébergements et pop fixés

--- a/booki/css/style.css
+++ b/booki/css/style.css
@@ -13,7 +13,7 @@ body {
 main {
     margin-left: 0;
     margin-right: 0;
-    padding: 0 45px 0 45px;
+    padding: 0 35px 0 35px;
 }
 
 /* Header */
@@ -197,7 +197,7 @@ input:focus {
     border: 1px solid #F2F2F2;
     border-radius: 15px;
     background-color: #F2F2F2;
-    width: 62%;
+    width: 65%;
 }
 
 .hebergementspop {
@@ -214,16 +214,16 @@ h2 {
 
 .hebergements_marseille_1,
 .hebergements_marseille_2 {
-    margin-top: 30px;
+    margin-top: 20px;
     display: flex;
-    padding-left: 30px;
+    padding-left: 25px;
     justify-content: space-between;
 }
 
 #hebergements a {
     width: 100%;
     height: auto;
-    padding-right: 30px;
+    padding-right: 25px;
 }
 
 a .card {
@@ -241,7 +241,6 @@ a .card:hover {
 
 .card {
     margin: 0;
-    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -298,8 +297,8 @@ a .card:hover {
 .populaires {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 28%;
+    justify-content: space-around;
+    width: 26%;
     border: 1px solid #F2F2F2;
     background-color: #F2F2F2;
     border-radius: 15px;
@@ -309,7 +308,7 @@ a .card:hover {
 .card_aside {
     display: flex;
     align-items: center;
-    border: 6px solid white;
+    border: 4px solid white;
     border-radius: 15px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
     background-color: white;
@@ -322,6 +321,10 @@ a .card:hover {
     align-items: center;
     font-size: 13px;
 }
+.aside_titre h2 {
+    padding-left: 0;
+    margin-bottom: 0;
+}
 
 .card_aside_infos .titre {
     margin-bottom: 5px;
@@ -330,6 +333,7 @@ a .card:hover {
 
 .fa-aside {
     font-size: large;
+    margin-top: 30px;
 }
 
 .card_aside_infos {
